--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,2 @@
-# Discord Bot Configuration
 DISCORD_BOT_TOKEN=your_discord_bot_token_here
-
-# Logging Configuration
-LOG_LEVEL=info
+DATABASE_CONNECTION=postgre
